@@ -37,6 +37,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #22787: Allow the keyfile argument of SSLContext.load_cert_chain to be
+  None.
+
 - Issue #22775: Fixed unpickling of Cookie.SimpleCookie with protocol 2.
   Patch by Tim Graham.
 
